add few changes
